--- a/SinFronteras/src/main/webapp/WEB-INF/css/banner.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/banner.css
@@ -1,6 +1,6 @@
 #banner{
     margin-top: 10px;
-    position: relative;
+    position: relative;    
 }
 
 #banner .contenedor{
@@ -8,7 +8,8 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    color: #fff;
+    color: #fff;  
+    
     
 }
 
@@ -16,9 +17,45 @@
     position: absolute;
     font-size: 28px;
     background:rgba(180, 38, 140, 0.5);
-    color: white;
+    color: white;   
+    margin-left: 120px;
+    height: 35px;
+   
+}
+
+.contenedor-slogan{
+    display: flex;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    color: #fff;
+    margin: auto;  
+    width: 100%;
+    height: 35px;
+    line-height: 35px;
+    overflow: hidden;
+
+}
+
+
+.ultext{
+    list-style: none;
+    margin-left: 307px;
+    padding-left: 8px;
+    background:rgba(180, 38, 140, 0.5);
+    font-size: 28px;
     margin-top: 5px;
-    margin-left: 100px;
+    position: absolute;
+    width: auto;
+    text-align: left;
+
+    animation: changeText 14s infinite;
+    
+}
+
+ul, p{
+    margin: 0;    
 
 }
 
@@ -27,7 +64,7 @@
     width: 120px;
     color: #fff;
     text-decoration: none;
-    padding: 7px;
+    height: 35px;
     margin-top: 45px;
     margin-left: 100px;
     /*border: 3px solid #fff;*/
@@ -67,6 +104,26 @@
 	display:block;
     margin:auto;
 }
+
+/* funcion del texto*/
+@keyframes changeText {
+
+    0%{margin-top: 0;}
+    20%{margin-top: 0;}	
+    
+    25%{margin-top: -35px;}
+    50%{margin-top: -35px;}
+    
+    55%{margin-top: -70px;}
+    80%{margin-top: -70px;}
+
+    85%{margin-top: -35px;}
+    90%{margin-top: -35px;}
+
+    100%{margin-top: 0;}
+
+}
+
 
 /* funcion del slider*/
 
