--- a/SinFronteras/src/main/webapp/WEB-INF/css/index.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/index.css
@@ -106,6 +106,15 @@ footer .contenedor{
 	background: #1ab0da;
 	border-radius: 5px;
 	width: 300px;
+        justify-content: center;
+        position: relative;
+}
+
+.footerslogan{
+	font-size: 15px;
+	margin-top: 80px;
+        justify-content: center;
+        position: absolute;
 }
 
 .sociales{
