--- a/SinFronteras/src/main/webapp/WEB-INF/css/navbar.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/navbar.css
@@ -1,35 +1,111 @@
-.navbar{
-    position: absolute;
-    width: wrapcontent;
-    background: #b4268c;
-    height: 50px;
+
+header{
+	height: 50px;
+	background: #1ab0da;
+    color: #fff;
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+header #btn-menu-navbar{
+    display: none;
+}
+
+header label{
+    font-size: 30px;
+    cursor: pointer;
+    display: none;
+    margin-right: 10px;
+    margin-top: 10px;
+}
+
+h1{
+    margin-top: 5px;
+    margin-right: 300px;
+	float: left;
+	font-family: 'Exo 2', sans-serif;
+	position: relative;
+}
+
+.logo {
+	width: 40px;
+	height: 40px;
+	float: left;
+    margin-right: 20px;
+    margin-left: -10px;	
+}
+
+
+.navbar ul{
+    background: rgba(26, 176, 218,0.5);
+    display: flex;
+    list-style: none;
+}
+
+.navbar ul ul{
+    display: none;
+    z-index: 1;
+    background:rgba(180, 38, 140, 0.5);
 }
 
 .navbar a{
-    float: right;
-    text-decoration: none;
+    display: block;
+    padding: 15px 20px;
     color: #fff;
-    padding: 10px;
-    height: 50px;
-    bottom: 5px;
-     
+    text-decoration: none;
+    transition: .5s;
 }
 
-.navbar-btn:focus{
-    background: #b4268c;
-    border-bottom: 3px solid #a9cd42;
-    border-top: 3px solid #1ab0da;
+.navbar a:hover{
+    background: rgba(0, 0, 0, 0.2);
+    transition: .5s;
 }
 
-.navbar-btn:hover{
-    background: rgba(180, 38, 140, 0.9);
-    transition: 0.5s;
+.navbar a span{
+    margin-left: 10px;
 }
 
-@media(min-width:1024px){
-    .navbar{
-        position: static;
-        width: auto;
-        height: auto;
+.navbar ul li:hover ul {
+    display: block;
+    position: absolute;  
+}
+
+@media (max-width:768px){
+    header label{
+        display: block;
     }
+
+    .navbar {
+        position: absolute;
+        top: 50px;
+        left: 0;
+        width: 50%;
+        transform: translateX(-100%);
+        transition: all 0.3s;
+        z-index: 1;
+    }
+
+    .navbar ul{
+        display: block;       
+    }
+
+    .navbar ul li:hover ul{
+        display: none;
+        position: static;
+    }
+
+    .navbar a span {
+        position: absolute;
+        right: 5px;
+    } 
+
+    #btn-menu-navbar:checked ~ .navbar{
+        transform: translateX(0%);
+    }
+
+    .navbar ul ul{
+        background: rgba(180, 38, 140, 0.5);
+    }
+
 }
