--- a/SinFronteras/src/main/webapp/WEB-INF/css/index.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/index.css
@@ -14,6 +14,7 @@ font-family: 'Exo 2', sans-serif;
 @import url('banner.css');
 @import url('pensum.css');
 @import url('cardsviews.css');
+@import url('clasificados.css');
 
 
 *{
@@ -29,9 +30,6 @@ body{
 	background: #fff;
 	text-align: center;
 }
-
-
-
 .slogan-2{
     font-size: 28px;
     background:#a9cd42;
@@ -39,13 +37,10 @@ body{
 	border-radius: 1px ;
 
 }
-
-
 .contenedor{
 	width: 98%;
 	margin: auto;
 }
-
 
 section{
 	width: 100%;
@@ -75,12 +70,7 @@ footer .contenedor{
 	border-radius: 5px;
 	width: 300px;
 }
-.footerslogan{
-	font-size: 15px;
-	margin-top: 80px;
-        justify-content: center;
-        position: absolute;
-}
+
 .sociales{
 	float: left;
 	width: 100%;
