--- a/SinFronteras/src/main/webapp/WEB-INF/css/login.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/login.css
@@ -2,11 +2,11 @@
     box-sizing: border-box;
 }
 
-body{
+.body-login{
     font-family: 'Exo 2', sans-serif;
     text-align: center;
-    margin: 0;
     background: url(../img/fondo_2.jpg);
+    margin: 0;
     background-size: cover;
     background-attachment: fixed;
 }
@@ -18,14 +18,13 @@ body{
 
 .formulario{
     background: white;
-    margin-top: 150px;
     padding: 3px;
+    border: 3px solid #1ab0da;
 }
 
-h1{
-    
+.slogan-3{
     color: #1ab0da;
-    font-size: 40px;
+    font-size: 36px;
 }
 
 input[type="text"],input[type="password"]{
@@ -33,7 +32,13 @@ input[type="text"],input[type="password"]{
     width: 82%;
     padding: 10px;
     border: none;
-
+    font-family: 'Exo 2', sans-serif;
+}
+textarea{
+    height: 300px;
+    font-size: 20px;
+    font-family: 'Exo 2', sans-serif;
+    border: none;
 }
 
 .input-content{
@@ -41,15 +46,16 @@ input[type="text"],input[type="password"]{
     border: 1px solid rgba(180, 38, 140, 0.9);
 }
 
+
 .icon{
-    
+    color: #1ab0da;
     min-width: 50px;
     text-align: center;
-    color: #1ab0da;
+   
 }
 .btn-registro{
     border: none;
-    width: 100%;
+    width: 50%;
     color: white;
     font-size: 20px;
     background: #1ab0da;
@@ -57,6 +63,7 @@ input[type="text"],input[type="password"]{
     border-radius: 5px;
     cursor: pointer;
     transition: .5s;
+    font-family: 'Exo 2', sans-serif;
 }
 
 .btn-registro:hover{
@@ -89,4 +96,4 @@ p{
         border-radius: 2%;
         margin-bottom: 50px;
     }
-}
+}   
