--- a/SinFronteras/src/main/webapp/WEB-INF/css/clasificados.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/clasificados.css
@@ -5,9 +5,10 @@
 }
 
 .clasificado{
-    width: 50%;
+    width: 45%;
     margin-top: 35px;
     margin-bottom:35px; 
+    position: relative;
 }
 .clasificado-title h3{
     text-align: center;
@@ -17,11 +18,9 @@
 }
 
 .clasificado-img{
-    
     width: 100%;
     position: relative;
-    background-color:rgba(26, 176, 218,0.8);
-    
+    background-color:rgba(26, 176, 218,0.8); 
 }
 
 .image-cl{
