--- a/SinFronteras/src/main/webapp/WEB-INF/css/index.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/index.css
@@ -15,6 +15,7 @@ font-family: 'Exo 2', sans-serif;
 @import url('pensum.css');
 @import url('cardsviews.css');
 @import url('clasificados.css');
+@import url('perfil.css');
 
 
 *{
@@ -40,6 +41,26 @@ body{
 .contenedor{
 	width: 98%;
 	margin: auto;
+}
+
+.contenedorN{
+	width: 90%;
+	margin: auto;
+        background-color:rgba(26,176,218,0.7);
+        
+}
+.Titulo-1{
+    text-align: left;
+     padding-left: 10px;
+     padding-top: 10px;
+     color: white;
+}
+.parrafor-2{
+    text-align: justify;
+    padding-top: 10px;
+    padding-left:55px; 
+    padding-right:55px; 
+    color: white;
 }
 
 section{
