--- a/SinFronteras/src/main/webapp/WEB-INF/css/navbar.css
+++ b/SinFronteras/src/main/webapp/WEB-INF/css/navbar.css
@@ -1,11 +1,12 @@
-
+nav{
+    margin-right: 20px;
+}
 header{
-	height: 50px;
-	background: #1ab0da;
+    height: 50px;
+    background: #1ab0da;
     color: #fff;
     display: flex;
     justify-content: flex-end;
-
 }
 
 header #btn-menu-navbar{
@@ -23,15 +24,15 @@ header label{
 h1{
     margin-top: 5px;
     margin-right: 300px;
-	float: left;
-	font-family: 'Exo 2', sans-serif;
-	position: relative;
+    float: left;
+    font-family: 'Exo 2', sans-serif;
+    position: relative;
 }
 
 .logo {
-	width: 40px;
-	height: 40px;
-	float: left;
+    width: 40px;
+    height: 40px;
+    float: left;
     margin-right: 20px;
     margin-left: -10px;	
 }
